--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,7 +16,7 @@
 .vertical-divider {
   height: 3.9em;
   margin: 0px;
-  border-inline-start: 1px solid rgba(5, 5, 5, 0.1);
+  border-inline-start: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .header-menu {
@@ -42,14 +42,16 @@
 
 .header-breadcrumb {
   .ant-breadcrumb-link {
-    color: #fff !important;
+    color: #0189a5 !important;
+    font-weight: 600;
     a {
-      color: #fff !important;
+      color: #0189a5 !important;
       opacity: 0.7;
+      font-weight: 600;
     }
   }
   .ant-breadcrumb-separator {
-    color: #fff !important;
+    color: #0189a5 !important;
     opacity: 0.7;
   }
 }
@@ -74,7 +76,7 @@
 
 .ant-table-thead {
   .ant-table-cell {
-    background: #1a2c3e !important;
+    background: #0189a5 !important;
     color: #fff !important;
   }
 }
@@ -97,7 +99,7 @@
 
 .breadcrumb-div {
   margin-top: 20px;
-  background-color: #1a2c3e;
+  background-color: #b3dce4;
   padding: 10px 35px;
   // border-radius: 12px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
@@ -201,7 +203,7 @@
   padding: 15px 15px 30px 30px;
   position: relative !important;
   overflow: scroll;
-  height: 70vh;
+  height: 75vh;
 }
 
 .chatfile-style {
@@ -463,7 +465,7 @@
   width: -webkit-fill-available;
 }
 .emoji-chatmessanger {
-  bottom: 45% !important;
+  bottom: 42% !important;
 }
 
 .Img_store {
@@ -622,7 +624,7 @@
   background: #ffffff;
   border: 2px solid #efefef;
   border-radius: 12px;
-  margin: 0px 7px 50px 7px;
+  // margin: 0px 7px 50px 7px;
   display: flex !important;
   flex-direction: row !important;
   padding: 7px 15px 7px 15px;
@@ -633,6 +635,9 @@
   justify-content: space-between;
   align-items: center;
   z-index: 999;
+}
+.quotedMessage-container-position {
+  margin: 0px 7px 70px 7px;
 }
 .quoted-details {
   width: 95%;
@@ -703,7 +708,10 @@
 }
 
 .ant-table-tbody > tr > td {
-  padding: 10px !important;
+  padding: 6px 10px 6px 10px !important;
+  &:first-child {
+    padding: 0px 10px 6px 10px !important;
+  }
 }
 
 .ant-space-item {
@@ -766,4 +774,151 @@
       color: white;
     }
   }
+}
+
+.billing-main-div {
+  margin-top: 20px;
+  width: 50%;
+  .billing-sub-div {
+    display: grid;
+    justify-content: space-evenly;
+    text-align: center;
+    grid-template-columns: 1fr 1fr;
+  }
+  .billing-header {
+    font-weight: 600;
+  }
+}
+
+@media (max-width: 1000px) {
+  .billing-main-div {
+    width: 100%;
+  }
+}
+.card-heading {
+  font-size: 24px;
+  font-weight: 600;
+}
+.report-text-primary {
+  font-size: 16px;
+  font-weight: 500;
+}
+.report-main-div {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.report-details-div {
+  // position: relative;
+  min-height: calc(100vh - 250px);
+}
+.btn-div {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+}
+.report-card {
+  position: relative;
+  .ant-card-body {
+    min-height: calc(100vh - 200px);
+  }
+}
+.menu-image-slider {
+  margin: 20px 0;
+  padding: 0 10px;
+  position: relative;
+  border-radius: 30px;
+
+  .slider {
+    border-radius: 30px;
+  }
+
+  .slick-list {
+    border-radius: 30px;
+  }
+
+  .slider-image {
+    border-radius: 30px;
+    width: -webkit-fill-available;
+    height: 350px;
+  }
+
+  .slick-prev:before,
+  .slick-next:before {
+    color: #fff !important;
+    position: absolute;
+  }
+
+  .slick-next {
+    right: 20px;
+    width: 36px;
+    height: 36px;
+  }
+
+  .slick-prev {
+    left: 5px;
+    width: 36px !important;
+    height: 36px !important;
+    z-index: 1;
+  }
+}
+.report-template-card {
+  position: relative;
+  height: calc(100vh - 200px);
+  overflow: auto;
+  .btn-div {
+    z-index: 9999;
+    position: absolute;
+    bottom: 0px;
+    right: 10px;
+    .ant-form-item-control-input-content {
+      display: flex;
+      gap: 10px;
+    }
+  }
+}
+.column-display-none{
+  display: none;
+}
+.ant-layout-header {
+  color: #fff !important;
+  background-color: #0189a5 !important;
+}
+.ant-menu-dark {
+  color: #fff !important;
+  background-color: #0189a5 !important;
+  font-weight: 500;
+}
+.ant-btn-primary{
+  background-color: #0189a5 !important;
+}
+.ant-menu-dark.ant-menu-horizontal >.ant-menu-submenu-selected, .ant-menu-dark.ant-menu-horizontal >.ant-menu-item-selected{
+  background-color: white !important;
+  color: #0189a5 !important;
+}
+.ant-menu-dark .ant-menu-submenu-selected >.ant-menu-submenu-title{
+  color: #0189a5 !important;
+}
+.ant-menu-submenu {
+  background-color: #0189a5 !important;
+  color: white !important;
+}
+.ant-modal-content {
+  padding: 0 !important;
+}
+.ant-modal-body, .ant-modal-footer {
+  padding: 10px 24px !important;
+}
+.ant-modal-header {
+  padding-top: 10px;
+  background-color: #0189a5 !important;
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+.ant-modal-close  {
+  top: 10px !important;
+  color: white !important;
+}
+.ant-modal-title {
+  color: white !important;
 }
