--- a/src/assets/scss/404.scss
+++ b/src/assets/scss/404.scss
@@ -208,38 +208,38 @@ body {
 }
 
 
-body {
-   margin: 0;
-   padding: 0;
-   height: auto;
-   font-family: $font-01;
-   background: $bg-01;
+// body {
+//    margin: 0;
+//    padding: 0;
+//    height: auto;
+//    font-family: $font-01;
+//    background: $bg-01;
 
-}
+// }
 
-.logo {
-   position: fixed;
-   z-index: 5;
-   bottom: 10px;
-   right: 10px;
-   width: 40px;
-   height: 40px;
-   border-radius: 100%;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   background: rgba(0, 0, 0, 0.1);
-   border-radius: 100%;
-   backdrop-filter: blur(5px);
+// .logo {
+//    position: fixed;
+//    z-index: 5;
+//    bottom: 10px;
+//    right: 10px;
+//    width: 40px;
+//    height: 40px;
+//    border-radius: 100%;
+//    display: flex;
+//    justify-content: center;
+//    align-items: center;
+//    background: rgba(0, 0, 0, 0.1);
+//    border-radius: 100%;
+//    backdrop-filter: blur(5px);
 
-   img {
+//    img {
 
-       width: 55%;
-       height: 55%;
-       transform: translateY(-1px);
-       opacity: 0.8;
-   }
-}
+//        width: 55%;
+//        height: 55%;
+//        transform: translateY(-1px);
+//        opacity: 0.8;
+//    }
+// }
 
 
 nav {
