--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -76,7 +76,7 @@
 
 .ant-table-thead {
   .ant-table-cell {
-    background: #00a0e3 !important;
+    background: #33b3e9 !important;
     color: #fff !important;
   }
 }
@@ -92,7 +92,7 @@
       height: 30px !important;
     }
     .ant-table-cell {
-      background-color: #e6f6fc !important;
+      // background-color: #e6f6fc !important;
     }
   }
 }
@@ -918,6 +918,8 @@
 }
 .ant-btn-primary {
   background-color: #00a0e3 !important;
+  font-size: 15px;
+  font-weight: 500;
 }
 .ant-menu-light .ant-menu-item-selected {
   color: white !important;
@@ -955,19 +957,41 @@
 }
 .ant-modal-header {
   padding-top: 10px;
-  // background-color: #1677ff !important;
+  background-color: #33b3e9 !important;
   padding-left: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px solid #11131546;
+  border-bottom: 1px solid #33b3e9;
 }
 .ant-modal-close {
   top: 10px !important;
-  // color: white !important;
+  color: white !important;
 }
 .ant-modal-title {
-  // color: white !important;
+  color: white !important;
 }
 .ant-steps .ant-steps-item-process .ant-steps-item-icon {
   background-color: #00a0e3;
   border-color: #00a0e3;
+}
+.ant-drawer-header{
+  background-color: #33b3e9 !important;
+  border-bottom: 1px solid #33b3e9;
+}
+.ant-drawer-close {
+  color: white !important;
+}
+.ant-drawer-title {
+  color: white !important;
+}
+.event-type-tag{
+  font-weight: 500;
+  font-size: 12px;
+}
+.ant-switch.ant-switch-checked {
+  background-color: #33b3e9 !important;
+}
+.btn-icon-div{
+  display: flex;
+  gap: 6px;
+  align-items: center;
 }
