--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -190,7 +190,7 @@
     font-size: 14px;
     line-height: 10px;
     // margin-top: 10px;
-    color: #ffffff;
+    color: rgba(0, 0, 0, 0.7058823529);
     gap: 0px;
     display: flex;
     flex-direction: column;
@@ -228,7 +228,7 @@
 .userchat-main {
   padding: 15px 15px 30px 30px;
   position: relative !important;
-  overflow: scroll;
+  overflow-y: auto;
   height: 75vh;
 }
 
@@ -258,8 +258,8 @@
   color: #ffffff;
   padding: 12px;
   border-radius: 10px;
-  background: #1a2c3e;
-  width: 70%;
+  background: #33b3e9;
+  width: 50%;
   float: right;
   margin-bottom: 16px;
   position: relative;
@@ -282,7 +282,7 @@
 
 .showcard-containerimg {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   background: #000;
   position: relative;
 }
@@ -310,12 +310,14 @@
 }
 
 .social-chatmessanger {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: -webkit-fill-available;
   // padding: 0px 7px 0px 7px;
   display: flex;
   flex-direction: column;
+  padding-left: 130px;
+  // width: calc(100vw - 400px);
 }
 
 .emoji-chatmessanger {
@@ -329,10 +331,10 @@
   margin-left: 7px;
   font-size: 15px;
   max-height: 6rem !important;
-  background: #1a2c3e;
-  color: white;
+  background: transparent;
+  color: #000000c3;
   &::placeholder {
-    color: white;
+    color: #00000050;
   }
   /* overflow: scroll !important; */
 }
@@ -341,11 +343,12 @@
   display: flex;
   align-items: center;
   padding: 15px;
-  background: #1a2c3e;
+  background: transparent;
   // border: 1px solid #efefef;
   // border-radius: 12px;
   z-index: 999;
   gap: 5px;
+  border-top: 1px solid #00000030;
 }
 
 .chat-camera-module > input[type="file"] {
@@ -380,7 +383,7 @@
   display: flex;
   justify-content: center;
   padding: 10px;
-  background: #99d3df;
+  background: #33b3e9;
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -684,7 +687,7 @@
 }
 .showcard-containerimg {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   background: #000;
   position: relative;
 }
@@ -755,15 +758,16 @@
 .chat-list-main-div {
   margin: 0px 0px 0px 0px;
   width: 300px;
-  background-color: #1a2c3e;
+  background-color: #fff;
   padding: 10px 10px;
   height: calc(100vh - 65px);
   overflow-y: auto;
   overflow-x: hidden;
-  border-right: 1px solid white;
+  border-right: 1px solid #00000030;
 }
 .chat-data-div {
   width: -webkit-fill-available;
+  position: relative;
 }
 
 .chat-list-div {
@@ -773,14 +777,15 @@
   cursor: pointer;
 
   img {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
   }
 }
 
 .chat-module-width {
   width: -webkit-fill-available !important;
-  background-color: #1a2c3e;
+  background-color: transparent;
+  // border-bottom: 1px solid #0000004f;
 }
 
 .modal-chat-position {
@@ -788,18 +793,23 @@
 }
 .chat-list-name {
   font-weight: 600;
-  color: white;
+  color: rgba(0, 0, 0, 0.7058823529);
 }
 .empty-chat-div {
-  background-color: #1a2c3e;
+  background-color: #fff;
   padding-top: 300px;
   height: calc(100vh - 65px);
   .chat-empty {
     .ant-empty-description {
       font-weight: 600;
-      color: white;
+      color: rgba(0, 0, 0, 0.7058823529);
     }
   }
+}
+.chat-list-div-active {
+  background-color: #f8f9fd;
+  margin: 0 -10px;
+  padding: 4px 10px;
 }
 
 .billing-main-div {
@@ -973,7 +983,7 @@
   background-color: #00a0e3;
   border-color: #00a0e3;
 }
-.ant-drawer-header{
+.ant-drawer-header {
   background-color: #33b3e9 !important;
   border-bottom: 1px solid #33b3e9;
 }
@@ -983,15 +993,43 @@
 .ant-drawer-title {
   color: white !important;
 }
-.event-type-tag{
+.event-type-tag {
   font-weight: 500;
   font-size: 12px;
 }
 .ant-switch.ant-switch-checked {
   background-color: #33b3e9 !important;
 }
-.btn-icon-div{
+.btn-icon-div {
   display: flex;
   gap: 6px;
   align-items: center;
+}
+.ant-collapse-content-box .ant-table-wrapper .ant-table-tbody > tr > td {
+  padding: 10px 10px !important;
+}
+.forward-chat-message {
+  hr {
+    color: #fff;
+    border-color: #fff;
+    border-style: solid;
+  }
+}
+.queue-status-list .ant-row div:last-child,
+.queue-status-list .ant-row div:nth-last-child(-n + 2) {
+  width: 100% !important;
+  max-width: 100% !important;
+}
+.ant-modal-body {
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
+}
+.error-btn {
+  border-color: #ff6b6d;
+  span {
+    color: #ff6b6d;
+  }
+}
+.error-btn-primary {
+  background-color: #ff6b6d !important;
 }
