--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -230,6 +230,7 @@
   position: relative !important;
   overflow-y: auto;
   height: 75vh;
+  overflow-x: hidden;
 }
 
 .chatfile-style {
@@ -331,7 +332,7 @@
   margin-left: 7px;
   font-size: 15px;
   max-height: 6rem !important;
-  background: transparent;
+  background: white;
   color: #000000c3;
   &::placeholder {
     color: #00000050;
@@ -343,7 +344,7 @@
   display: flex;
   align-items: center;
   padding: 15px;
-  background: transparent;
+  background: white;
   // border: 1px solid #efefef;
   // border-radius: 12px;
   z-index: 999;
@@ -492,9 +493,12 @@
   bottom: 0px !important;
   position: fixed;
   width: -webkit-fill-available;
+  padding-left: 130px;
+  height: 275px;
+  overflow-y: auto;
 }
 .emoji-chatmessanger {
-  bottom: 42% !important;
+  bottom: 47% !important;
 }
 
 .Img_store {
