modified filter button

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1033,3 +1033,6 @@
 .error-btn-primary {
   background-color: #ff6b6d !important;
 }
+.filter-selected {
+  background-color: #00405b !important;
+}
