resolved study issues

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1048,3 +1048,11 @@
     top: 14px !important;
   }
 }
+
+.study-image-slider {
+  padding: 0 10px;
+}
+
+.action-icon-primary {
+  color: #00405b !important;
+}
