--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1056,3 +1056,34 @@
 .action-icon-primary {
   color: #00405b !important;
 }
+
+.secondary-btn {
+  background-color: #00405b !important;
+}
+
+.filter-menu {
+  .ant-menu-overflow-item {
+    background-color: #00a0e3 !important;
+    color: #fff !important;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 6px !important;
+    svg,
+    span {
+      color: #fff !important;
+      font-size: 14px !important;
+    }
+    &::after {
+      border-bottom-width: 0px !important;
+    }
+    .ant-menu-title-content {
+      font-size: 14px;
+    }
+  }
+}
+.ant-menu-submenu {
+  .ant-menu-item {
+    margin-bottom: 0px !important;
+  }
+}
