--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1136,3 +1136,12 @@
     overflow-y: auto;
   }
 }
+
+
+.ant-menu-item-icon{
+  margin-left: 8px !important;
+}
+
+.ant-menu-submenu-vertical{
+  margin-left: -11px !important;
+}
