--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1143,5 +1143,9 @@
 }
 
 .ant-menu-submenu-vertical{
-  margin-left: -11px !important;
+  margin-left: -13px !important;
+}
+
+.ant-menu-submenu:hover{
+  background-color: transparent !important;
 }
