--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1237,3 +1237,24 @@
   padding-left: 0rem !important;
   padding-right: 0rem !important;
 }
+
+.study-auditing-modal .ant-modal-content{
+  height: 93vh !important;
+  overflow-y: hidden !important;
+}
+
+.study-auditing-modal .ant-modal-body{
+  max-height: 93vh !important;
+  overflow-y: hidden;
+}
+
+.Study-auditing-modal .study-modal-patient-info-layout{
+  height: 25vh !important;
+}
+
+.Study-auditing-modal-table-data{
+  height: 53vh !important;
+  overflow-y: auto !important;
+  margin-top: 1rem;
+  border-top: 1px solid #c4c4c4;
+}
