Insert Study series count information

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1258,3 +1258,11 @@
   margin-top: 1rem;
   border-top: 1px solid #c4c4c4;
 }
+
+.Study-count-column{
+  text-align: center;
+}
+
+.Study-table table td{
+  text-align: center;
+}
