--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1281,6 +1281,7 @@
   padding: 0px;
   box-shadow: 3px 3px 8px 0px rgba(210, 210, 210, 0.5);
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .chat-data-div{
@@ -1309,6 +1310,7 @@
 .all-chat-list{
   height: 80vh !important;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .study-chat-userdata{
@@ -1346,9 +1348,46 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  padding-top: 0.50rem;
+  padding-bottom: 0.50rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-bottom-width: 0px !important;
+  border-top-left-radius: 10px !important;
+  border-top-right-radius: 10px;
 }
 
 .Chat-user-image{
-  height: 24px;
-  width: 24px;
+  height: 36px;
+  width: 36px;
+}
+
+.header-user-info{
+  margin-left: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-weight: 500;
+}
+
+.userchat-main{
+  height: 69vh;
+  background-color: #f5f5f5;
+}
+
+.Main-chat-data-division{
+  padding: 0.2rem;
+  background-color: #FFFFFF;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.userchat-date{
+  color: #212121;
+  font-weight: 600;
+}
+
+.userchat-container{
+  background-color: #00a0e3;
 }
