Update ChatList component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1391,3 +1391,13 @@
 .userchat-container{
   background-color: #00a0e3;
 }
+
+.Latest-timestamp-info-layout{
+  background-color: #f5f5f5;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  padding-top: 0.1rem;
+  padding-bottom: 0.4rem;
+  margin-top: 0.4rem;
+  border-radius: 5px;
+}
