Update Chat functionality

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1447,3 +1447,34 @@
   margin-left: 8px;
 }
 
+.userchat-container{
+  padding-left: 0.60rem;
+  padding-right: 0.60rem;
+  padding-top: 0.80rem;
+  padding-bottom: 0.80rem;
+}
+
+.Chat-username-information{
+  font-size: 13px;
+  font-weight: bold;
+  background-color: #FFFFFF;
+  color: #212121;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 3px;
+}
+
+.userchat-data{
+  margin-top: 15px;
+}
+
+.option-menu-image{
+  height: 12px;
+  width: 12px;
+}
+
+.userchat-time{
+  margin-top: 12px;
+}
