--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1518,10 +1518,9 @@
 
 .Study-export-option-modal .ant-form-item-control-input-content{
   width: 95% !important;
-  float: right;
+  margin-left: 1rem;
 }
 
 .Study-export-option-modal .ant-picker{ 
   width: 90% !important;
-  float: right;
 }
