Update Advance search modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1524,3 +1524,11 @@
 .Study-export-option-modal .ant-picker{ 
   width: 90% !important;
 }
+
+.Advance-search-modal{
+  width: 80% !important;
+}
+
+.Advance-search-modal .ant-modal-body{
+  padding-top: 1rem !important;
+}
