Update Quick Filter modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1532,3 +1532,16 @@
 .Advance-search-modal .ant-modal-body{
   padding-top: 1rem !important;
 }
+
+.Quick-filter-modal{
+  width: 60% !important;
+}
+
+.Quick-filter-modal .ant-modal-body{
+  padding-top: 1rem !important;
+}
+
+
+.Quick-filter-modal-button{
+  background-color: #064f32 !important;
+}
