--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1577,13 +1577,13 @@
   margin-top: 1rem;
 }
 
-.Report-info-table th, td{
+.Report-info-table th,
+.Report-info-table td {
   border: 1px solid #c4c4c4;
   padding: 0.50rem;
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
 .report-details-div{
   border-right: 1px solid #c4c4c4;
 }
