Update main scss file

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1539,6 +1539,7 @@
   flex-direction: row;
   justify-content:space-between;
   align-items: center;
+}
 
 .Billing-search-modal{
   width: 70% !important;
