Add Chat module permission an update role permission page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1633,3 +1633,15 @@
 .ck-widget_with-resizer img{
   height: 100px !important;
 }
+
+.edit-permission-card{
+  height: 86vh;
+  overflow-y: auto;
+  border-radius: 0px;
+  padding-top: 0.20rem;
+  padding-bottom: 0.20rem;
+}
+
+.anticon-wechat{
+  
+}
