--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1673,3 +1673,86 @@
   margin-top: 0.5rem;
   border-radius: 10px;
 }
+
+.report-summary-main{
+  width: 100%;
+  height: 100vh;
+  background-color: #f5f5f5;  
+  display: flex;
+  justify-content: center;
+  align-items:center;
+}
+
+.report-summary-wrapper{
+  padding: 0.5rem;
+  width: 95%;
+  height: 90%;
+  // backdrop-filter: blur(16px) saturate(135%);
+  // -webkit-backdrop-filter: blur(16px) saturate(135%);
+  background-color:rgba(238, 238, 238, 0.88);
+  border-radius: 10px;
+  box-shadow: 0 0 13px 1px rgba(0, 0, 0, 0.15);
+  display: flex;
+  justify-content:space-between ;
+  align-items: center;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.report-summary-wrapper>div{
+  margin-top: 0.5rem;
+}
+
+.report-summary-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 95%;
+  background-color: white;
+  font-size: 1.3rem;
+  padding:0.7rem;
+  border-radius: 10px;
+ 
+}
+
+.report-summary-header>button{
+  color: transparent;
+  color: white I !important;
+}
+
+.report-summary-buttons>button{
+   margin-right: 0.5rem;
+}
+.report-summary-patient-details{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: max-content;
+}
+
+.report-summary-patient-details>div{
+  width: 50%;
+}
+
+.w-95{
+  width: 95%;
+}
+
+
+
+
+.bold-text{
+  font-weight: 600;
+}
+
+.red-color-button{
+  background-color: rgb(218, 0, 0) !important;
+}
+
+.primary-thin-button{
+  border-color: #1677ff;
+  color: #1677ff;
+  border-width:1px;
+}
