--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1674,29 +1674,31 @@
   border-radius: 10px;
 }
 
-.report-summary-main{
-  width: 100%;
-  height: 100vh;
-  background-color: #f5f5f5;  
-  display: flex;
-  justify-content: center;
-  align-items:center;
-}
+// .report-summary-main{
+//   width: 100%;
+//   height: 100vh;
+//   background-color: #f5f5f5;  
+//   display: flex;
+//   justify-content: center;
+//   align-items:center;
+// }
 
 .report-summary-wrapper{
-  padding: 0.5rem;
-  width: 95%;
-  height: 90%;
+  // padding: 0.5rem;
+  width: 100%;
+  height: 100vh;
   // backdrop-filter: blur(16px) saturate(135%);
   // -webkit-backdrop-filter: blur(16px) saturate(135%);
   background-color:rgba(238, 238, 238, 0.88);
   border-radius: 10px;
   box-shadow: 0 0 13px 1px rgba(0, 0, 0, 0.15);
   display: flex;
-  justify-content:space-between ;
+  justify-content:flex-start ;
   align-items: center;
   flex-direction: column;
   overflow-y: auto;
+  overflow-x: hidden;
+  padding-bottom: 0.5rem;
 }
 
 .report-summary-wrapper>div{
@@ -1710,9 +1712,8 @@
   width: 95%;
   background-color: white;
   font-size: 1.3rem;
-  padding:0.7rem;
+  padding:0.7rem 0;
   border-radius: 10px;
- 
 }
 
 .report-summary-header>button{
