Handle previous button option color in Institution modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1844,3 +1844,9 @@ thead>tr>th{
   // border:1px solid red;
   background-color:white !important;
 }
+
+
+.update-button-option{
+  background-color: #CCCCCC !important;
+  color: #212121 !important;
+}
