--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1692,13 +1692,27 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 100%;
+  width: fit-content;
   background-color: #f3f1f1;
-  // border: 1px solid #1677ff;
   color:black;
-  padding:0.6rem 0rem;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 0.6rem;
+  padding-bottom: 0.6rem;
+}
+
+.user-profile-information-span{
+  margin-left: 0.80rem;
+  font-weight: 600;
+  color: #2e2e2e;
+}
+
+.Logout-option-button{
+  background-color: rgb(255, 78, 78) !important; 
 }
 
 // .report-summary-main{
