Handle Delete filter option

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1994,6 +1994,6 @@ thead>tr>th{
   font-weight: 600;
 }
 
-.ant-btn:hover{
-  background-color: #0073ff !important;
+.Filter-delete-option{
+  background-color:  #FFFFFF !important;
 }
