Add tooltip for handle

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2167,6 +2167,9 @@ thead>tr>th {
   width: 90%;
 }
 
+.urgent-case-information-data{
+  color: red;
+}
 
 
 @media only screen and (min-height: 600px) and (max-height:700px) {
