Update Normal report view image slider

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2212,6 +2212,8 @@ thead>tr>th {
   padding: 0.5rem 0;
 }
 
-.Advance-report-study-description-selection{
-  
+.Normal-report-view-option-modal{
+  .ant-modal-body{
+    padding-top: 1rem !important;
+  }
 }
