Add OHIF Viwer option and handle OHIF viewer

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2236,3 +2236,10 @@ thead>tr>th {
     padding-top: 1rem !important;
   }
 }
+
+.ohif-viwer-option-icon{
+  height: 16px;
+  width: 16px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
