--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -218,8 +218,13 @@
   .ant-drawer-body {
     padding: 0;
   }
+ 
 
   width: 700px;
+}
+
+.ant-drawer-content-wrapper{
+  width: 430px !important;
 }
 
 .wrap_tabbing {
