Update view report plugin

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2300,3 +2300,9 @@ margin-top: 8px !important;
   margin-top: auto;
   margin-bottom: auto;
 }
+
+.Advance-view-report-layout{
+  .ant-card-body{
+    height: 80vh ;  
+  }
+}
