--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2301,8 +2301,7 @@ margin-top: 8px !important;
   margin-bottom: auto;
 }
 
-.Advance-view-report-layout{
-  .ant-card-body{
-    height: 80vh ;  
-  }
+.Advance-view-report-layout .ant-card-body{
+  height: 80vh ;  
+  overflow-y: auto;
 }
