--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -927,7 +927,8 @@
 }
 
 .report-details-div {
-  min-height: calc(100vh - 250px);
+  height: calc(100vh - 250px);
+  overflow-y: auto;
 }
 
 .btn-div {
@@ -2317,4 +2318,8 @@ margin-top: 8px !important;
 
 label[for="study_description"]{
   margin-top: 9px;
+}
+
+.iod-setting-div .ant-select-selector .ant-select-selection-placeholder{
+  line-height:33px !important;
 }
