--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1339,8 +1339,8 @@
   padding-top: 1rem;
   border-top: 1px solid #c4c4c4;
   margin-top: 1rem;
-  height: 31vh;
   overflow-x: auto;
+  height: 45vh;
 }
 
 .assign-study-modal {
@@ -2342,3 +2342,8 @@ label[for="study_description"]{
   }   
 }
 
+.clinical-history-modal{
+  .ant-modal-content{
+    height: 95vh
+  }
+}
