--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2377,3 +2377,37 @@ label[for="study_description"]{
     height: auto;
   }
 }
+
+#download-page-main{
+  border-radius: 8;
+  overflow: hidden;
+  width: 100%;
+  max-width: 100%;
+  height:100vh;
+  max-height:max-content;
+}
+
+.download-page-advertise{
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+
+  >div{
+    // width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+.download-typography{
+  font-size: 2rem;
+  font-weight: 500;
+  width: 40% !important;
+  text-align: center;
+}
