--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2389,7 +2389,6 @@ label[for="study_description"]{
 
 .download-page-advertise{
   width: 100%;
-  height: 20rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -2406,8 +2405,28 @@ label[for="study_description"]{
 }
 
 .download-typography{
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-weight: 500;
-  width: 40% !important;
   text-align: center;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.download-description{
+  margin-top: 1rem;
+  font-size: 1rem;
+  justify-content: center;
+  text-align: center;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Download-instruction-steps{
+  .ant-steps-item{
+    margin-top: 0.60rem;
+  }
+  .particular-steps-instruction{
+    font-size: 0.90rem;
+  }
 }
