Update create user functionality

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2466,5 +2466,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 }
 
 .form-step-0 :where(.css-dev-only-do-not-override-15rg2km).ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select{
-  height: 5.5rem;
+  height: 5rem;
+  width: 10rem;
+  padding: 0.4rem !important;
 }
