--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2479,6 +2479,37 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   color: #000 !important;
 }
 
+// Study new status tag color information 
 :where(.css-dev-only-do-not-override-15rg2km).ant-tag-success {
-  color: #38ab00 !important; 
+  color: #FFFFFF !important; 
+  background-color: #59b32c !important;
+}
+
+// Study Assinged status tag color information 
+:where(.css-dev-only-do-not-override-15rg2km).ant-tag-blue {
+  background-color: #296cd9 !important;
+  color: #FFFFFF !important;
+}
+
+// Study ViewReport status tag color information 
+:where(.css-dev-only-do-not-override-15rg2km).ant-tag-lime {
+  background-color: #7cb305 !important;
+  color:  #FFFFFF !important;
+}
+
+// Study Viewed status tag color information 
+:where(.css-dev-only-do-not-override-15rg2km).ant-tag-cyan {
+  background-color: #08979c !important;
+  color:  #FFFFFF !important;
+  border: 1px solid #08979c;
+}
+
+:where(.css-dev-only-do-not-override-15rg2km).ant-tag-magenta{
+  background-color: #c41d7f !important;
+  color: #FFFFFF !important;
+}
+
+:where(.css-dev-only-do-not-override-15rg2km).ant-tag-red{
+  background-color: #cf1322 !important;
+  color:  #FFFFFF !important;
 }
